# nasser

./: .env.example  .gitignore  CLAUDE.md  README.md  policy.example.yaml  pyproject.toml
deploy/sudoers.d/: nasser
deploy/systemd/: nasser.service
src/nasser_bot/: __init__.py  app.py  command.py  config.py  formatting.py  policy.py  settings.py  tokens.py
src/nasser_bot/services/: __init__.py  alerts.py  backup.py  compose.py  docker_service.py  health.py  k8s_service.py  network.py  system.py  ups.py
tests/: test_system_smart.py
